# sunpy-sphinx-theme

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rtd-environment.yml  .stylelintrc  .stylelintrc.json  .travis.yml  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  rebuild_all.py  rebuild_all_rtd.py  ruff.toml  setup.cfg  setup.py  tool.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml  main.workflow  release.workflow
.github/workflows/: lighthouse.yml  pythonpublish.yml
docs/: cards.rst  colors.rst  conf.py  customizing.rst  index.rst  subsections.rst  subsections_toc.rst  web-components.rst
docs/code_ref/: animals.rst  index.rst
docs/test_package/: __init__.py  animals.py  timerange.py
examples/: example_template.py
examples/section/: example_template_subsection.py
src/sunpy_sphinx_theme/: __init__.py  cards.py  conf.py
src/sunpy_sphinx_theme/sunpy/: docsidebar.html  footer.html  navbar.html  theme.conf
src/sunpy_sphinx_theme/sunpy/static/: active.js  copybutton.js  sunpy_style.css  version.js
src/sunpy_sphinx_theme/sunpy/static/styles/: sunpy-sphinx-theme.css
src/sunpy_sphinx_theme/sunpy/templates/sections/: footer-content.html  header.html
src/sunpy_sphinx_theme/theme/sunpy/: page-footer.html  theme.conf  theme.toml
src/sunpy_sphinx_theme/theme/sunpy/components/: built-with.html  footer-links.html  navbar-logo.html  navbar_center.html  navbar_start.html  sst-sidebar-nav.html
src/sunpy_sphinx_theme/theme/sunpy/sections/: header.html
src/sunpy_sphinx_theme/theme/sunpy/static/: sunpy_cards.css  sunpy_enhanced_search.js  sunpy_style.css  version.js
src/sunpy_sphinx_theme/theme/sunpy/static/css/: rtd_enhanced_search.css  sunpy_cards.css
src/sunpy_sphinx_theme/theme/sunpy/static/js/: rtd_enhanced_search.js  submenu-concertina-toggle.js  submenu-toggle.js
src/sunpy_sphinx_theme/theme/sunpy/templates/: navbar_center.html
sunpy_sphinx_theme/: __init__.py  conf.py
sunpy_sphinx_theme/sunpy/: docsidebar.html  footer.html  layout.html  navbar.html  search.html  sidebar.html  theme.conf
sunpy_sphinx_theme/sunpy/static/: copybutton.js  style.css  sunpy_style.css  version.js
test_package/: README.RST  setup.cfg  setup.py
test_package/docs/: api.rst  color.rst  conf.py  index.rst  subsections.rst  subsections_toc.rst  web-components.rst
test_package/docs/code_ref/: index.rst  stuff.rst  timerange.rst
test_package/examples/: README.txt  example_template.py
test_package/examples/section/: README.txt  example_template_subsection.py
test_package/test_package/: __init__.py  timerange.py
tools/: rebuild_all_rtd.py
