[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "sunpy-sphinx-theme"
authors = [
  {name = "The SunPy Developers"},
]
description = "The sphinx theme for the SunPy website and documentation."
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
]
requires-python = ">=3.9"
dependencies = [
  "pydata-sphinx-theme~=0.15.0",
  "sphinx"
]

[project.optional-dependencies]
docs = [
  "matplotlib",
  "sphinx-automodapi",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-gallery",
  "sphinx-hoverxref",
  "sphinx-togglebutton",
  "sunpy",
]

[project.entry-points]
"sphinx.html_themes" = { sunpy = "sunpy_sphinx_theme" }

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
  | \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | \.history
)/
'''

[ tool.gilesbot ]
  [ tool.gilesbot.circleci_artifacts.giles ]
    enabled = false

  [ tool.gilesbot.circleci_artifacts.website ]
    url = "sunpy.org/_build/html/index.html"
    message = "SunPy website preview"
    report_on_fail = true

  [ tool.gilesbot.circleci_artifacts.sunpydocs ]
    url = "sunpy/docs/_build/html/index.html"
    message = "sunpy docs preview"
    report_on_fail = true

[tool.isort]
  profile = "black"
  balanced_wrapping = true
  default_section = "THIRDPARTY"
  include_trailing_comma = true
  known_first_party = "sunpy_sphinx_theme"
  length_sort = false
  length_sort_sections = "stdlib"
  line_length = 110
  multi_line_output = 3
  no_lines_before = "LOCALFOLDER"
  sections = "STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER"
