[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "sunpy-sphinx-theme"
authors = [
  {name = "The SunPy Developers"},
]
description = "The sphinx theme for the SunPy website and documentation."
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
]
requires-python = ">=3.9"
dependencies = [
  "pydata-sphinx-theme~=0.15.0",
  "sphinx<7.3.0"
]

[project.optional-dependencies]
docs = [
  "matplotlib",
  "sphinx-automodapi",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-gallery",
  "sphinx-hoverxref",
  "sphinx-togglebutton",
  "sunpy",
]

[project.entry-points]
"sphinx.html_themes" = { sunpy = "sunpy_sphinx_theme" }

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]

[ tool.gilesbot ]
  [ tool.gilesbot.circleci_artifacts.giles ]
    enabled = false

  [ tool.gilesbot.circleci_artifacts.website ]
    url = "sunpy.org/_build/html/index.html"
    message = "SunPy website preview"
    report_on_fail = true

  [ tool.gilesbot.circleci_artifacts.sunpydocs ]
    url = "sunpy/docs/_build/html/index.html"
    message = "sunpy docs preview"
    report_on_fail = true
